typescript/checker/tests/conformance/expressions/functionCalls/typeArgumentInferenceTransitiveConstraints.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            89,
        ),
        hi: BytePos(
            90,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/functionCalls/typeArgumentInferenceTransitiveConstraints.ts:3:13
  |
3 |     return [a, b, c];
  |             ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            113,
        ),
        hi: BytePos(
            115,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/functionCalls/typeArgumentInferenceTransitiveConstraints.ts:6:9
  |
6 | var d = fn(new Date(), new Date(), new Date());
  |         ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            158,
        ),
        hi: BytePos(
            159,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/functionCalls/typeArgumentInferenceTransitiveConstraints.ts:7:5
  |
7 | var d: Date[]; // Should be OK (d should be Date[])
  |     ^

